--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@webdeveducation/next-verify-stripe": "^1.0.1",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.13.0",
+    "mongoose": "^7.1.1",
     "next": "13.1.6",
     "numeral": "^2.0.6",
     "openai": "^3.2.1",
