--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "^13.1.6",
     "@webdeveducation/next-verify-stripe": "^1.0.1",
+    "antd": "^5.5.0",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.13.0",
     "mongoose": "^7.1.1",
